libraries/ecc100j/lib/ecc100/ecc.h

typedef int Bln32;                              /**< Boolean compatible to older C      */
typedef int Int32;                              /**< Basic type                         */
/** @brief Control output stage
 *
 *  Controls the output relais of the selected axis.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Switches the output relais
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlOutput( Int32 deviceHandle, 
                                 Int32 axis,
                                 Bln32* enable,
                                 Bln32 set );
/** @brief Control actor approach
 *
 *  Controls the approach of the actor to the target position
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Enables/ disables the approach
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlMove( Int32 deviceHandle,
                               Int32 axis,
                               Bln32* enable,
                               Bln32 set );
/** @brief Control continous movement backward
 *
 *  Controls continous movement in backward direction. If enabled a potential present movement
 *  in the opposite direction is stopped. The parameter "false" stops all movement of the axis regardless
 *  its direction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Enables/ disables the movement
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlContinousBkwd( Int32 deviceHandle,
                                        Int32 axis,
                                        Bln32* enable,
                                        Bln32 set );
/** @brief Control target position
 *
 *  Controls the target position for the approach function, see @ref ECC_controlMove .
 *  For linear type actors the position is defined in nm for goniometer an rotator type
 *  actors it is µ°.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  target        Target position in nm or µ° depending on actor type.
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlTargetPosition( Int32 deviceHandle,
                                         Int32 axis,
                                         Int32* target,
                                         Bln32 set );
/** @brief Reference status
 *
 *  Retrieves the status of the reference position. It may be valid or invalid.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  valid         Status of the reference position.
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusReference( Int32 deviceHandle,
                                      Int32 axis,
                                      Bln32* valid );
/** @brief Moving status
 *
 *  Retrieves the status of the output stage. Moving means the actor is actively driven by the output stage
 *  either for approaching or continous/single stepping and the output is active. Pending means the output
 *  stage is driving but the output is deactivted i.e. by EOT or ECC_controlOutput.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  moving        Moving status, 0: Idle; 1: Moving; 2: Pending
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusMoving( Int32 deviceHandle,
                                   Int32 axis,
                                   Int32* moving );
/** @brief Error status
 *
 *  Retrieves the error status. Indicates a sensor malfunction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  error         Error status. "True" means the occurrence of an error.
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusError( Int32 deviceHandle,
                                  Int32 axis,
                                  Bln32* error );
/** @brief Connected status
 *
 *  Retrieves the connected status. Indicates whether an actor is eletrically connected
 *  to the controller.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  connected     status
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusConnected( Int32 deviceHandle,
                                      Int32 axis,
                                      Bln32* connected );
/** @brief Reference position
 *
 *  Retrieves the reference position. See @ref ECC_getStatusReference for 
 *  determining the validity.
 *  For linear type actors the position is defined in nm for goniometer an rotator type
 *  actors it is µ°.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  reference     Reference position in nm or µ° depending on actor type.
 *  @return               Result of function
 */
Int32 NCB_API ECC_getReferencePosition( Int32 deviceHandle,
                                        Int32 axis,
                                        Int32* reference );
/** @brief Actor position
 *
 *  Retrieves the current actor position.
 *  For linear type actors the position is defined in nm for goniometer an rotator type
 *  actors it is µ°.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  position      Actor position in nm or µ° depending on actor type.
 *  @return               Result of function
 */
Int32 NCB_API ECC_getPosition( Int32 deviceHandle,
                               Int32 axis,
                               Int32* position );