ecc100j/src/ecc100/bindings/EccLibrary.java


  /**
   * @brief Control continous movement backward<br>
   *        <br>
   *        Controls continous movement in backward direction. If enabled a
   *        potential present movement<br>
   *        in the opposite direction is stopped. The parameter "false" stops
   *        all movement of the axis regardless<br>
   *        its direction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          Enables/ disables the movement<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlContinousBkwd(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:366</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlContinousBkwd(int deviceHandle,
                                             int axis,
                                             Pointer<Integer> enable,
                                             int set)
  {
    return ECC_controlContinousBkwd(deviceHandle,
                                    axis,
                                    Pointer.getPeer(enable),
                                    set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlContinousBkwd(int deviceHandle,
                                                       int axis,
                                                       @Ptr long enable,
                                                       int set);

  /**
   * @brief Control target position<br>
   *        <br>
   *        Controls the target position for the approach function, see @ref
   *        ECC_controlMove .<br>
   *        For linear type actors the position is defined in nm for goniometer
   *        an rotator type<br>
   *        actors it is \u00b5\u00b0.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param target
   *          Target position in nm or \u00b5\u00b0 depending on actor type.<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlTargetPosition(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:384</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlTargetPosition(int deviceHandle,
                                              int axis,
                                              Pointer<Integer> target,
                                              int set)
  {
    return ECC_controlTargetPosition(deviceHandle,
                                     axis,
                                     Pointer.getPeer(target),
                                     set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlTargetPosition(int deviceHandle,
                                                        int axis,
                                                        @Ptr long target,
                                                        int set);

  /**
   * @brief Reference status<br>
   *        <br>
   *        Retrieves the status of the reference position. It may be valid or
   *        invalid.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param valid
   *          Status of the reference position.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusReference(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:400</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusReference(int deviceHandle,
                                           int axis,
                                           Pointer<Integer> valid)
  {
    return ECC_getStatusReference(deviceHandle,
                                  axis,
                                  Pointer.getPeer(valid));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusReference(int deviceHandle,
                                                     int axis,
                                                     @Ptr long valid);

  /**
   * @brief Moving status<br>
   *        <br>
   *        Retrieves the status of the output stage. Moving means the actor is
   *        actively driven by the output stage<br>
   *        either for approaching or continous/single stepping and the output
   *        is active. Pending means the output<br>
   *        stage is driving but the output is deactivted i.e. by EOT or
   *        ECC_controlOutput.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param moving
   *          Moving status, 0: Idle; 1: Moving; 2: Pending<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusMoving(Int32, Int32, Int32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:417</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusMoving(int deviceHandle,
                                        int axis,
                                        Pointer<Integer> moving)
  {
    return ECC_getStatusMoving(deviceHandle,
                               axis,
                               Pointer.getPeer(moving));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusMoving(int deviceHandle,
                                                  int axis,
                                                  @Ptr long moving);

  /**
   * @brief Error status<br>
   *        <br>
   *        Retrieves the error status. Indicates a sensor malfunction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param error
   *          Error status. "True" means the occurrence of an error.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusError(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:432</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusError(int deviceHandle,
                                       int axis,
                                       Pointer<Integer> error)
  {
    return ECC_getStatusError(deviceHandle,
                              axis,
                              Pointer.getPeer(error));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusError(int deviceHandle,
                                                 int axis,
                                                 @Ptr long error);

  /**
   * @brief Connected status<br>
   *        <br>
   *        Retrieves the connected status. Indicates whether an actor is
   *        eletrically connected<br>
   *        to the controller.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param connected
   *          status<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusConnected(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:448</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusConnected(int deviceHandle,
                                           int axis,
                                           Pointer<Integer> connected)
  {
    return ECC_getStatusConnected(deviceHandle,
                                  axis,
                                  Pointer.getPeer(connected));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusConnected(int deviceHandle,
                                                     int axis,
                                                     @Ptr long connected);

  /**
   * @brief Reference position<br>
   *        <br>
   *        Retrieves the reference position. See @ref ECC_getStatusReference
   *        for <br>
   *        determining the validity.<br>
   *        For linear type actors the position is defined in nm for goniometer
   *        an rotator type<br>
   *        actors it is \u00b5\u00b0.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param reference
   *          Reference position in nm or \u00b5\u00b0 depending on actor
   *          type.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getReferencePosition(Int32, Int32, Int32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:467</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getReferencePosition(int deviceHandle,
                                             int axis,
                                             Pointer<Integer> reference)
  {
    return ECC_getReferencePosition(deviceHandle,
                                    axis,
                                    Pointer.getPeer(reference));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getReferencePosition(int deviceHandle,
                                                       int axis,
                                                       @Ptr long reference);

  /**
   * @brief Actor position<br>
   *        <br>
   *        Retrieves the current actor position.<br>
   *        For linear type actors the position is defined in nm for goniometer
   *        an rotator type<br>
   *        actors it is \u00b5\u00b0.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param position
   *          Actor position in nm or \u00b5\u00b0 depending on actor type.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getPosition(Int32, Int32, Int32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:484</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getPosition(int deviceHandle,
                                    int axis,
                                    Pointer<Integer> position)
  {
    return ECC_getPosition(deviceHandle,
                           axis,
                           Pointer.getPeer(position));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getPosition(int deviceHandle,
                                              int axis,
                                              @Ptr long position);
